--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "expo": "^25.0.0",
+    "haversine": "^1.1.0",
     "moment": "^2.21.0",
     "react": "16.2.0",
     "react-native": "0.52.0",
