--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
   },
   "dependencies": {
     "expo": "30.0.1",
+    "haversine": "^1.1.0",
     "moment": "2.22.2",
     "native-base": "^2.8.1",
     "react": "16.5.2",
     "react-native": "0.55.4",
-    "react-native-motion": "https://github.com/xotahal/react-native-motion.git"
+    "react-native-motion": "git+https://github.com/xotahal/react-native-motion.git"
   }
 }
