--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "native-base": "^2.8.1",
     "react": "16.5.2",
     "react-native": "0.55.4",
+    "react-native-animated-tabs": "^1.3.3",
     "react-native-motion": "git+https://github.com/xotahal/react-native-motion.git"
   }
 }
